--- a/Android-App/app/src/main/AndroidManifest.xml
+++ b/Android-App/app/src/main/AndroidManifest.xml
@@ -18,9 +18,16 @@
         android:theme="@style/Theme.Elaundryapps"
         tools:targetApi="31">
         <activity
-            android:name=".ui.Register"
-            android:parentActivityName=".ui.Welcome"
+            android:name=".ui.PasswordRecovery"
             android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".ui.Register"
+            android:exported="false"
+            android:parentActivityName=".ui.Welcome">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
