Dashboard User dan Fragment User

--- a/Android-App/app/src/main/AndroidManifest.xml
+++ b/Android-App/app/src/main/AndroidManifest.xml
@@ -18,6 +18,13 @@
         android:theme="@style/Theme.Elaundryapps"
         tools:targetApi="31">
         <activity
+            android:name=".user.DashboardUser"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".ui.PasswordRecovery"
             android:exported="false">
             <meta-data
