--- a/Android-App/app/build.gradle
+++ b/Android-App/app/build.gradle
@@ -43,4 +43,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation "com.squareup.okhttp3:logging-interceptor:3.12.1"
+
+    implementation "androidx.appcompat:appcompat:1.7.0-alpha01"
 }
