--- a/Android-App/app/src/main/AndroidManifest.xml
+++ b/Android-App/app/src/main/AndroidManifest.xml
@@ -18,10 +18,38 @@
         android:theme="@style/Theme.Elaundryapps"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+
+        <!--
+             TODO: Before you run your application, you need a Google Maps API key.
+
+             To get one, follow the directions here:
+
+                https://developers.google.com/maps/documentation/android-sdk/get-api-key
+
+             Once you have your API key (it starts with "AIza"), define a new property in your
+             project's local.properties file (e.g. MAPS_API_KEY=Aiza...), and replace the
+             "YOUR_API_KEY" string in this file with "${MAPS_API_KEY}".
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyCmNRw6rlmrX3LRFghjAohbsmdF0csYRXw" />
+
+        <activity
+            android:name=".ui.MapsActivityUser"
+            android:exported="false"
+            android:label="Map" />
+<!--        <activity-->
+<!--            android:name=".user.DetailOrderan"-->
+<!--            android:exported="false"-->
+<!--            android:parentActivityName=".user.DashboardUser">-->
+<!--            <meta-data-->
+<!--                android:name="android.app.lib_name"-->
+<!--                android:value="" />-->
+<!--        </activity>-->
         <activity
             android:name=".user.OrderLaundry"
-            android:parentActivityName=".user.DetailLaundry"
-            android:exported="false">
+            android:exported="false"
+            android:parentActivityName=".user.DetailLaundry">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -34,13 +62,13 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-        <activity
-            android:name=".store.DashboardStore"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
+<!--        <activity-->
+<!--            android:name=".store.DashboardStore"-->
+<!--            android:exported="false">-->
+<!--            <meta-data-->
+<!--                android:name="android.app.lib_name"-->
+<!--                android:value="" />-->
+<!--        </activity>-->
         <activity
             android:name=".user.DashboardUser"
             android:exported="false">
@@ -79,7 +107,8 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".ui.Welcome"
+
+            android:name=".store.DashboardStore"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
